<resources>
    <string name="app_name">Fundaciones</string>
    <string name="loging.message.email">Correo</string>
    <string name="loging.message.password">Contraseña</string>
    <string name="loging.button.singin">Inicia Sesión</string>
    <string name="loging.button.gotosignup">ir a Crear Cuenta</string>

    <string name="loging.error.messagge.signin">Imposible iniciar sesion %s</string>
    <string name="loging.error.messagge.signup">Imposible crear nuevo usuario %s</string>
    <string name="loging.notice.signin">Usuario agregado exitosamente</string>
    <string name="loging.message.nombrefundacion">Fundación</string>
    <string name="loging.message.direccion">Dirección</string>
    <string name="loging.message.telefono">Teléfono</string>
    <string name="loging.message.nit">Nit</string>
    <string name="loging.message.representante">Persona de Contacto</string>
    <string name="signup.button.signup">Crear Cuenta</string>

    <string name="verbebes.menu.action.signoff">Cerrar sesión</string>
    <string name="signup_registro_completo">Gracias!</string>
    <string name="err_msg_name">No puede estar vacio</string>
    <string name="err_msg_email">Correo no valido</string>
    <string name="err_msg_password">Ingrese una contraseña</string>
    <string name="err_msg_phone">Ingrese número telefónico</string>
    <string name="err_msg_nit">Ingrese nit o numero de cedula</string>
    <string name="err_msg_direccion">No puede estar vacio</string>
    <string name="err_msg_representante">Ingrese nombre del representante legal</string>

    <string name="main.titles.perros">Perros</string>
    <string name="main.title.gatos">Gatos</string>
    <string name="main.title.otros">Otros</string>
    <string name="main.title.perdidos">Perdidos y encontrados</string>
    <string name="main.notice.upload.init">En proceso de publicación, revisar en unos minutos</string>
    <string name="main.notice.upload.complete">Publicado exitosamente</string>
    <string name="main.error.dispatch.camera">Error al crear archivo</string>
    <string name="menu.action.logout">Cerrar sesión</string>
    <string name="main.mesage.picture.source">Seleccione una foto</string>

    <string name="search">Buscar</string>
    <string name="fav">Favoritos</string>
    <string name="verbebes.menu.action.about">Sobre</string>

    <string name="addcontact.messagge.title">Agregar Perro</string>
    <string name="addcontact.messagge.title2">Agregar Gato</string>
    <string name="addcontact.messagge.add">Aceptar</string>
    <string name="addcontact.messagge.cancel">Cancel</string>
    <string name="photolist_message_share">compartido</string>
    <string name="perroClick">perro click</string>

    <string name="main_message_picture_source">Selecciona una foto</string>

    <string name="cargando.fotos">Espere que carguen las fotos para poder compartir</string>

    <string-array name="SelectEsteril">
        <item>Si</item>
        <item>No</item>
    </string-array>

    <string-array name="SelectTamano">
        <item>Pequeño hasta 10kg</item>
        <item>Mediano entre 11-20kg</item>
        <item>Grande entre 21-29kg</item>
        <item>MuyGrande más de 30kg</item>
    </string-array>

    <string-array name="SelectTamanoGatos">
        <item>Pequeño hasta 3kg</item>
        <item>Mediano entre 3-5kg</item>
        <item>Grande entre 5-7kg</item>
    </string-array>

    <string-array name="SelectSexo">
        <item>Hembra</item>
        <item>Macho</item>
    </string-array>

    <string-array name="SelectVacuna">
        <item>Si</item>
        <item>No</item>
    </string-array>

    <string-array name="SelectEdad">
        <item>Años</item>
        <item>Meses</item>
    </string-array>

    <string-array name="SelectDiscapa">
        <item>Si</item>
        <item>No</item>
    </string-array>

    <string-array name="SelectEspecie">
        <item>Hamster</item>
        <item>Paloma</item>
        <item>Ratón</item>
        <item>Conejo</item>
        <item>Caballo</item>
        <item>Otros</item>
        <item>OtrasAves</item>
    </string-array>

    <string-array name="SelectEspeciePerdidos">
        <item>Perro</item>
        <item>Gato</item>
        <item>Hamster</item>
        <item>Paloma</item>
        <item>Ratón</item>
        <item>Conejo</item>
        <item>Caballo</item>
        <item>Otros</item>
        <item>OtrasAves</item>
    </string-array>

    <string-array name="SelectTipo">
        <item>Adopciones</item>
        <item>Donaciones</item>
        <item>Adopciones/Donaciones</item>
        <item>Bañaton</item>
        <item>Construcción</item>
        <item>Adopciones/Bañaton</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_titles_otros">Otros</string>
    <string name="main_titles_eventos">Eventos</string>
    <string name="main_titles_perdidos">Perdidos</string>
    <string name="nombre_evento">Nombre del Evento</string>
    <string name="lugar_evento">Lugar</string>
    <string name="selecciona_fecha">Selecciona la fecha</string>
    <string name="selecciona_hora">Selecciona la hora</string>
    <string name="tipo_evento">Tipo de Evento</string>
    <string name="edad">Edad</string>
    <string name="nombre">Nombre</string>
    <string name="sexo">Sexo</string>
    <string name="tamano">Tamaño</string>
    <string name="esterilizado">Esterilizado</string>
    <string name="vacunado">Vacunado</string>
    <string name="discapacidad">Discapacidad</string>
    <string name="especie">Especie</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="celular">Celular</string>
    <string name="descripcion">Descripción</string>
    <string name="email">Email</string>
    <string name="ingresar_datos">Todos los datos son necesarios</string>
    <string name="exitos">Agregado con exito</string>
    <string name="cancelado">Acción cacelada</string>

</resources>
