<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/containerAddE">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:layout_width="140dp"
            android:layout_height="150dp"
            android:id="@+id/imgEvent"
            android:src="@android:drawable/ic_menu_camera"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/wrapernameperro">
                    <EditText
                        android:layout_marginTop="10dp"
                        android:id="@+id/txtNombreE"
                        android:layout_height="match_parent"
                        android:hint="@string/nombre_evento"
                        android:layout_width="match_parent"
                        style="@style/subtitulos"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/wraperlugar">
                    <EditText
                        android:layout_marginTop="10dp"
                        android:id="@+id/txtLugar"
                        android:layout_height="match_parent"
                        android:hint="@string/lugar_evento"
                        android:layout_width="match_parent"
                        style="@style/contenido"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/selecciona_fecha"
                    android:id="@+id/etFecha"
                    android:layout_centerHorizontal="true"
                    style="@style/contenido"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/selecciona_hora"
                    android:id="@+id/etHora"
                    android:layout_centerHorizontal="true"
                    style="@style/contenido"/>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tipo_evento"
                    android:id="@+id/txtTipo"
                    android:paddingBottom="25dp"
                    style="@style/contenido"/>

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerTipo"
                    style="@style/contenido"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>