<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cv"
    cardView:cardCornerRadius="4dp"
    android:layout_gravity="center"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    cardView:cardElevation="5dp"
    android:layout_margin="5dp"
    android:background="#E2E2E2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:padding="2dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/imgOtro"
                android:src="@mipmap/ic_launcher" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:padding="2dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txtNombre"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:hint="@string/nombre"
                style="@style/titulos" />

            <TextView
                android:id="@+id/txtEspecie"
                android:layout_width="wrap_content"
                android:layout_weight="0.6"
                android:layout_height="0dp"
                android:hint="@string/especie"
                style="@style/contenido" />

            <TextView
                android:id="@+id/txtSexo"
                android:layout_width="wrap_content"
                android:layout_weight="0.6"
                android:layout_height="0dp"
                android:hint="@string/sexo"
                style="@style/contenido" />

            <TextView
                android:id="@+id/txtEdad"
                android:layout_width="wrap_content"
                android:layout_weight="0.6"
                android:layout_height="0dp"
                android:hint="@string/edad"
                style="@style/contenido" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="2dp"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_menu_share"
                    android:background="@android:color/transparent"
                    android:id="@+id/imgShare"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:src="@android:drawable/ic_menu_delete"
                    android:id="@+id/imgDelete"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
